# s3-client

./: README.md  package.json  vite.config.ts
scripts/: README.md  build-windows-amd64.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: app_update.rs  config_manage.rs  file_manage.rs  mod.rs
src-tauri/src/models/: mod.rs  oss_config.rs  transfer_process.rs
src-tauri/src/utils/: mod.rs  oss.rs
src/components/: Svg.vue
src/router/: index.ts
src/services/: config.ts  file.ts
src/styles/: reset.less  style.less
src/types/: constants.ts  index.d.ts
src/utils/: loading.ts  utils.ts
src/views/: BucketList.vue  ConfigForm.vue  ConfigList.vue  FileManager.vue  Settings.vue
src/views/components/: ContextMenu.vue  FilePreviewModal.vue  TransferIndicator.vue
