[package]
name = "s3-client"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "s3_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["image-png"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
url = "2"

aws-config = { version = "1.1.7", features = ["default"] }
aws-sdk-s3 = "=1.108.0"
aws-smithy-types = "1.3.4"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.18.1", features = ["v4"] }
mime_guess = "2.0"
once_cell = "1.21.3"
parquet = "56"
rust_xlsxwriter = "0.89"
bytes = "1"
arrow-array = "56.2.1"
arrow-cast = "56.2.1"
 
